More stuff added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +42,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">weejunhong</a>
+                <a class="navbar-brand page-scroll" href="#page-top">wee junhong</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,41 +99,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Services</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center left-block">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Service 1</h3>
-                        <p class="text-muted">This</p>
+                        <i class="fa fa-4x fa-code text-primary sr-icons"></i>
+                        <h3>Coding</h3>
+                        <p class="text-muted">Still</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center center-block">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Service 2</h3>
-                        <p class="text-muted">is </p>
+                        <i class="fa fa-4x fa-camera text-primary sr-icons"></i>
+                        <h3>Photography</h3>
+                        <p class="text-muted">Not </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center right-block">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Service 3</h3>
-                        <p class="text-muted">not</p>
+                        <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
+                        <h3>Web Design</h3>
+                        <p class="text-muted">Done</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Service 4</h3>
+                        <i class="fa fa-4x fa-circle-o text-primary sr-icons"></i>
+                        <h3>Others</h3>
                         <p class="text-muted">done</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -253,13 +252,17 @@
                     <hr class="primary">
                     <p>Feel free to contact me via these platforms</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>+65 9876 5432</p>
+                    <p>+65 98765432</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">asdf@gmail.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">weejunhong@gmail.com</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-linkedin fa-3x sr-contact"></i>
+                    <p><a href="https://www.linkedin.com/in/jun-hong-wee-89396868/">LinkedIn</a></p>
                 </div>
             </div>
         </div>
