--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Welcome.</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur ex vel bibendum aliquet.
-                    Praesent placerat magna sit amet accumsan maximus. Suspendisse potenti. Aliquam accumsan dignissim eros at aliquet.
-                    Aenean a lacus rhoncus, efficitur ipsum sit amet, euismod neque. Vivamus sed sem id mauris tincidunt sollicitudin sit amet in diam.
-                    Proin at laoreet urna. Quisque sit amet sapien elit. In condimentum accumsan fringilla. Nullam vel eleifend justo.
-                    Nulla hendrerit ultricies arcu ac elementum. Sed vel imperdiet ipsum, id porta nisl.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>Dude<br/>
+                    Student<br/>
+                    Located in Singapore<br/>
+                    I do photography and IT related projects<br/>
+                    Since 2014.<br/>
+                </p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Interested?</a>
             </div>
         </div>
     </header>
@@ -86,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Blah Blah Blah</h2>
+                    <h2 class="section-heading">More about me</h2>
                     <hr class="light">
                     <p class="text-faded">asdf</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Click Here.</a>
@@ -99,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">What I do</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -147,10 +148,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Ecommerce Website
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Sole Mate Inc.
                                 </div>
                             </div>
                         </div>
