--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">What I Do</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -87,10 +87,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">More about me</h2>
+                    <img src="img/profile.JPG" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
+                    <h2 class="section-heading">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">asdf</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Click Here.</a>
+                    <p class="text-faded">I'm a final year student in Nanyang Polytechnic studying Multimedia & Infocomm-Technology <br/>
+                        <br/>
+                                          I have a strong passion for photography and all things tech <br/>
+                        <br/>
+                                          Scroll down to find out more on the specifics and the projects I do</p>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Find out more</a>
                 </div>
             </div>
         </div>
@@ -107,25 +112,25 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 text-center left-block">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-code text-primary sr-icons"></i>
                         <h3>Coding</h3>
-                        <p class="text-muted">Still</p>
+                        <p class="text-muted">C#, Java, Swift, etc. </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 text-center center-block">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-camera text-primary sr-icons"></i>
                         <h3>Photography</h3>
-                        <p class="text-muted">Not </p>
+                        <p class="text-muted">Events, people, street or anything that tickles my fancy</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 text-center right-block">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
                         <h3>Web Design</h3>
-                        <p class="text-muted">Done</p>
+                        <p class="text-muted">HTML5, CSS, PHP, JavaScript, etc.</p>
                     </div>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6 text-center">
@@ -239,8 +244,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>bg-dark container</h2>
-                <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
+                <h2>Lazy to put content</h2>
             </div>
         </div>
     </aside>
@@ -251,7 +255,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get in touch!</h2>
                     <hr class="primary">
-                    <p>Feel free to contact me via these platforms</p>
+                    <p>Feel free to contact me via these platforms <br/> PS. I don't bite</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
