--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Hello Hester
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    I love you
                                 </div>
                             </div>
                         </div>
@@ -183,10 +183,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    CHEESY AF
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    I KENUT
                                 </div>
                             </div>
                         </div>
