--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/profile.JPG" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
+                    <img src="img/profile.jpg" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
                     <h2 class="section-heading">About me</h2>
                     <hr class="light">
                     <p class="text-faded">I'm a final year student in Nanyang Polytechnic studying Multimedia & Infocomm-Technology <br/>
