--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Lazy to put content</h2>
+                <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha">
             </div>
         </div>
     </aside>
@@ -266,7 +267,7 @@
     </section>
 
     <script src="vendor/jquery/jquery.min.js"></script>
-
+	<script src="vendor/jquery/jquery.js" type="text/javascript"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
