--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     I do photography and IT related projects<br/>
                     Since 2014.<br/>
                 </p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Interested?</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll" style="opacity: 0.9">Interested?</a>
             </div>
         </div>
     </header>
@@ -84,10 +84,13 @@
                     <hr class="light">
                     <p class="text-faded">I'm a final year student in Nanyang Polytechnic studying Multimedia & Infocomm-Technology <br/>
                         <br/>
-                                          I have a strong passion for photography and all things tech <br/>
+                                          I have a strong passion for photography and all things tech
+                        <br/>
                         <br/>
                                           Scroll down to find out more on the specifics and the projects I do</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Find out more</a>
+                        <br/>
+                        <br/>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button" style="opacity: 0.9">Find out more</a>
                 </div>
             </div>
         </div>
@@ -160,10 +163,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Events (Photographer)
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    MP Chan Chee Seng Book Launch
                                 </div>
                             </div>
                         </div>
@@ -175,16 +178,16 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Photography
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Long Exposure
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -229,6 +232,7 @@
                         </div>
                     </a>
                 </div>
+                -->
             </div>
         </div>
     </section>
