Comment out gif

--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <!-- <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Lazy to put content</h2>
                 <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha">
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <section id="contact">
         <div class="container">
