--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +18,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <link href="css/creative.min.css" rel="stylesheet">
+	<link href="css/pickle.scss" rel="stylesheet">
 
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -237,14 +237,15 @@
         </div>
     </section>
 
-    <!-- <aside class="bg-dark">
+    <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Lazy to put content</h2>
-                <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha">
+				<div id="rick"></div>
+                <!-- <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha"> -->
             </div>
         </div>
-    </aside> -->
+    </aside>
 
     <section id="contact">
         <div class="container">
@@ -254,10 +255,10 @@
                     <hr class="primary">
                     <p>Feel free to contact me via these platforms <br/> PS. I don't bite</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <!-- <div class="col-lg-4 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+65 98765432</p>
-                </div>
+                </div> -->
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:your-email@your-domain.com">weejunhong@gmail.com</a></p>
