Changing stuff to site

--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/X1009224-3.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/X1009224-3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Photography
                                 </div>
-                                <div class="project-name">
+                                <!-- <div class="project-name">
                                     Long Exposure
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </a>
@@ -237,15 +237,15 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+   <!-- <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Lazy to put content</h2>
 				<div id="rick"></div>
-                <!-- <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha"> -->
+                &lt;!&ndash; <img src="img/whiteman.gif" class="img-responsive center-block" alt="Hahahahhahahaha"> &ndash;&gt;
             </div>
         </div>
-    </aside>
+    </aside>-->
 
     <section id="contact">
         <div class="container">
