--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="img/profile.jpg" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
                     <h2 class="section-heading">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm a final year student in Nanyang Polytechnic studying Multimedia & Infocomm-Technology <br/>
+                    <p class="text-faded">I'm a graduate in Nanyang Polytechnic with a Diploma in Multimedia & Infocomm-Technology <br/>
                         <br/>
                                           I have a strong passion for photography and all things tech
                         <br/>
@@ -125,7 +125,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
                         <h3>Web Design</h3>
-                        <p class="text-muted">HTML5, CSS, PHP, JavaScript, etc.</p>
+                        <p class="text-muted">HTML5, CSS, JavaScript, etc.</p>
                     </div>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6 text-center">
