--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <i class="fa fa-linkedin fa-3x sr-contact"></i>
-                    <p><a href="https://www.linkedin.com/in/jun-hong-wee-89396868/">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/weejunhong">LinkedIn</a></p>
                 </div>
             </div>
         </div>
