--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                     <img src="img/profile.jpg" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
                     <h2 class="section-heading">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm a graduate in Nanyang Polytechnic with a Diploma in Multimedia & Infocomm-Technology <br/>
+                    <p class="text-faded">I'm a graduate from Nanyang Polytechnic with a Diploma in Multimedia & Infocomm-Technology <br/>
                         <br/>
                                           I have a strong passion for photography and all things tech
                         <br/>
                         <br/>
-                                          Scroll down to find out more on the specifics and the projects I do</p>
+                                          Scroll down to find out more on the projects I worked on</p>
                         <br/>
                         <br/>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button" style="opacity: 0.9">Find out more</a>
@@ -278,7 +278,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-    
+
     <script src="js/creative.min.js"></script>
 
 </body>
