Fixing image issue

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     Photography
                                 </div>
                                 <!-- <div class="project-name">
-                                    Long Exposure
+                                    Street Photography
                                 </div> -->
                             </div>
                         </div>
