--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-code text-primary sr-icons"></i>
-                        <h3>Coding</h3>
+                        <h3>Software Development</h3>
                         <p class="text-muted">C#, Java, Swift, etc. </p>
                     </div>
                 </div>
