--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3-1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3-1.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Photography
+                                    Mobile Application Development
                                 </div>
                                 <!-- <div class="project-name">
                                     Street Photography
