--- a/index.html
+++ b/index.html
@@ -82,12 +82,9 @@
                     <img src="img/profile.jpg" class="img-circle" alt="Me" style="width: 20%; padding-bottom: 15px;">
                     <h2 class="section-heading">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">I'm a graduate from Nanyang Polytechnic with a Diploma in Multimedia & Infocomm-Technology <br/>
-                        <br/>
-                                          I have a strong passion for photography and all things tech
-                        <br/>
-                        <br/>
-                                          Scroll down to find out more on the projects I worked on</p>
+                    <p class="text-faded">I am a current Year 2 undergraduate pursuing Computer Science <br>in the National University of Singapore.<br><br>
+                        I have a strong passion for software development, computer security and all things tech<br/><br/>
+                        Scroll down to find out more on the projects I worked on! </p>
                         <br/>
                         <br/>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button" style="opacity: 0.9">Find out more</a>
@@ -111,14 +108,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-code text-primary sr-icons"></i>
                         <h3>Software Development</h3>
-                        <p class="text-muted">C#, Java, Swift, etc. </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-camera text-primary sr-icons"></i>
-                        <h3>Photography</h3>
-                        <p class="text-muted">Events, people, street or anything that tickles my fancy</p>
+                        <p class="text-muted">Python, Java, Swift, etc. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
@@ -126,6 +116,13 @@
                         <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
                         <h3>Web Design</h3>
                         <p class="text-muted">HTML5, CSS, JavaScript, etc.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-camera text-primary sr-icons"></i>
+                        <h3>Photography</h3>
+                        <p class="text-muted">Events, people, street or anything that tickles my fancy</p>
                     </div>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6 text-center">
@@ -261,7 +258,7 @@
                 </div> -->
                 <div class="col-lg-6 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">weejunhong@gmail.com</a></p>
+                    <p><a href="mailto:weejunhong@gmail.com">Email</a></p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <i class="fa fa-linkedin fa-3x sr-contact"></i>
