--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <h4>Street Photography</h4>
                 <p>Street Shoots</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/photography/street/cover.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Central Station, Sydney, Australia"><i class="bx bx-expand"></i></a>
+                  <a href="assets/img/portfolio/photography/street/street_cover.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Central Station, Sydney, Australia"><i class="bx bx-expand"></i></a>
                   <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link-external"></i></a> -->
                 </div>
               </div>
@@ -320,7 +320,7 @@
                 <h4>Traffic Surveillance Application</h4>
                 <p>Android Application using IoT</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/tsa/tsa4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  <a href="assets/img/portfolio/tsa/tsa4.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                       title="An android application that helps facilitate the process of monitoring SAF transport operators using IoT sensors, GPS and a mobile app on public roads. <br><br> 
                             Represented NYP and achieved finalist postition for the inaugural LHL Interactive Media Award. <br><br>
                             <em>Technologies: Java, Android Studio MySQL, OBD2 Controllers</em>"><i class="bx bx-expand"></i></a>
