--- a/index.html
+++ b/index.html
@@ -301,12 +301,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/photography/street/cover.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/photography/street/street_cover" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Street Photography</h4>
                 <p>Street Shoots</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/photography/street/street_cover.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Central Station, Sydney, Australia"><i class="bx bx-expand"></i></a>
+                  <a href="assets/img/portfolio/photography/street/street_cover.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="Central Station, Sydney, Australia"><i class="bx bx-expand"></i></a>
                   <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link-external"></i></a> -->
                 </div>
               </div>
@@ -315,7 +316,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/tsa/tsa4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/tsa/tsa4.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Traffic Surveillance Application</h4>
                 <p>Android Application using IoT</p>
