--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/photography/street/street_cover" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/photography/street/street_cover.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Street Photography</h4>
                 <p>Street Shoots</p>
