--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-web">Web Dev</li>
               <li data-filter=".filter-app">Mobile Dev</li>
-              <li data-filter=".filter-card">Photgrahpy</li>
+              <li data-filter=".filter-card">Photography</li>
             </ul>
           </div>
         </div>
