--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
+      <a href="#about" class="btn btn-warning btn-lg page-scroll" style="opacity: 0.75; margin-top: 60px; color: #fff">Find out more</a>
     </div>
   </section><!-- End Hero -->
 
@@ -97,6 +98,9 @@
 
               Scroll down to find out more on the projects I worked on!
             </p>
+            <a href="#portfolio" class="btn btn-warning btn-md page-scroll" style="opacity: 0.75; margin-top: 60px; color: #fff">Projects</a>
+            <a href="#skills" class="btn btn-warning btn-md page-scroll" style="opacity: 0.75; margin-top: 60px; color: #fff">Skills</a>
+            <a href="#resume" class="btn btn-warning btn-md page-scroll" style="opacity: 0.75; margin-top: 60px; color: #fff">Resume</a>
             <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -118,50 +122,49 @@
       </div>
     </section><!-- End About Section -->
 
-<!-- ======= Services Section ======= -->
-<section id="skills" class="services">
-  <div class="container">
+  <!-- ======= Services Section ======= -->
+  <section id="skills" class="services">
+    <div class="container">
+      <div class="section-title">
+        <h2>Skills</h2>
+        <p>The following are my non-exhaustive list of technical and non-technical competencies.</p>
+      </div>
 
-    <div class="section-title">
-      <h2>Skills</h2>
-      <p>The following are my non-exhaustive list of technical and non-technical competencies.</p>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+          <div class="icon"><i class="bx bx-book-open"></i></div>
+          <h4 class="title"><a href="">Programming Languages & Tools</a></h4>
+          <p class="description">Java, Python, C, C++, SQL, PHP, Bash, Git</p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+          <div class="icon"><i class="bx bx-coin-stack"></i></div>
+          <h4 class="title"><a href="">Databases</a></h4>
+          <p class="description">MySQL, SQLite, Firebase Storage</p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="icon"><i class="bx bx-library"></i></div>
+          <h4 class="title"><a href="">Web Development</a></h4>
+          <p class="description">JavaScript, TypeScript, HTML/CSS, Bootstrap, React, node.js</p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+          <div class="icon"><i class="bx bx-laptop"></i></div>
+          <h4 class="title"><a href="">Technologies</a></h4>
+          <p class="description">Github, Git, Apache, Vim, LATEX, SourceTree, Figma</p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+          <div class="icon"><i class="bx bx-speaker"></i></div>
+          <h4 class="title"><a href="">Communication</a></h4>
+          <p class="description">English (Fluent), Chinese (Fluent)</p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+          <h4 class="title"><a href="">Others</a></h4>
+          <p class="description">Team Leadership, Teamwork</p>
+        </div>
+      </div>
+
     </div>
-
-    <div class="row">
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-        <div class="icon"><i class="bx bx-book-open"></i></div>
-        <h4 class="title"><a href="">Programming Languages & Tools</a></h4>
-        <p class="description">Java, Python, C, C++, SQL, PHP, Bash, Git</p>
-      </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-        <div class="icon"><i class="bx bx-coin-stack"></i></div>
-        <h4 class="title"><a href="">Databases</a></h4>
-        <p class="description">MySQL, SQLite, Firebase Storage</p>
-      </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-        <div class="icon"><i class="bx bx-library"></i></div>
-        <h4 class="title"><a href="">Web Development</a></h4>
-        <p class="description">JavaScript, TypeScript, HTML/CSS, Bootstrap, React, node.js</p>
-      </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-        <div class="icon"><i class="bx bx-laptop"></i></div>
-        <h4 class="title"><a href="">Technologies</a></h4>
-        <p class="description">Github, Git, Apache, Vim, LATEX, SourceTree, Figma</p>
-      </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-        <div class="icon"><i class="bx bx-speaker"></i></div>
-        <h4 class="title"><a href="">Communication</a></h4>
-        <p class="description">English (Fluent), Chinese (Fluent)</p>
-      </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-        <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-        <h4 class="title"><a href="">Others</a></h4>
-        <p class="description">Team Leadership, Teamwork</p>
-      </div>
-    </div>
-
-  </div>
-</section><!-- End Services Section -->
+  </section><!-- End Services Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
