--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Software Security Engineer Intern</h4>
+              <h4>Cybersecurity Software Engineer Intern</h4>
               <h5>Visa, Mobile & Mac Security (MMS) Team</h5>
               <h5>May 2023 - Present</h5>
               <!-- <ul>
@@ -204,7 +204,7 @@
               </ul> -->
             </div>
             <div class="resume-item">
-              <h4>Software Security Engineer Intern</h4>
+              <h4>Cybersecurity Research Engineer Intern</h4>
               <h5>DSO National Laboratories, Cybersecutiy Lab (CSL)</h5>
               <h5>May - Aug 2022</h5>
               <!-- <ul>
@@ -215,7 +215,7 @@
               </ul> -->
             </div>
             <div class="resume-item">
-              <h4>Banking Technology Associate Intern</h4>
+              <h4>Banking Technology Intern</h4>
               <h5>United Overseas Bank, Group Technology Operations (GTO)</h5>
               <h5>May - Aug 2021</h5>
               <!-- <ul>
