--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Wee Jun Hong</h1>
-      <p>I'm a <span class="typed" data-typed-items="Software Engineer., Security Engineer., Photographer., Sports Enthusiast."></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer., Cybersecurity Engineer., Photographer., Sports Enthusiast."></span></p>
       <div class="social-links">
         <a href="https://github.com/whoisjunhong" class="github"><i class="bx bxl-github"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
