--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Cybersecurity Software Engineer Intern</h4>
-              <h5>Visa, Mobile & Mac Security (MMS) Team</h5>
+              <h4>Cybersecurity Analyst Intern</h4>
+              <h5>Visa, Mobile and Mac Security (MMS) Team</h5>
               <h5>May 2023 - Present</h5>
               <!-- <ul>
                 <li>Performed ethical penetration testing on various Visa mobile and Mac assets to simulate real-life security vulnerabilities and scenarios</li>
