--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="assets/img/profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Hi! I'm Junhong, a <br>Software &amp; Cybersecurity Engineer</h3><br>
+            <h3>Hi! I'm Junhong, a <br>Software &amp; Security Engineer</h3><br>
             <p>
               I am a final year undergraduate Computer Science student
               in the National University of Singapore. <br><br>
@@ -134,27 +134,27 @@
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
           <div class="icon"><i class="bx bx-book-open"></i></div>
           <h4 class="title"><a href="">Programming Languages & Tools</a></h4>
-          <p class="description">Java, Python, C, C++, SQL, PHP, Bash, Git</p>
+          <p class="description">Java, Kotlin, Python, Swift, C, C++, SQL, PHP, Bash, BurpSuite, Frida, MobSF</p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
           <div class="icon"><i class="bx bx-coin-stack"></i></div>
           <h4 class="title"><a href="">Databases</a></h4>
-          <p class="description">MySQL, SQLite, Firebase Storage</p>
+          <p class="description">PostgresSQL, MySQL, SQLite, Firebase Storage</p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
           <div class="icon"><i class="bx bx-library"></i></div>
           <h4 class="title"><a href="">Web Development</a></h4>
-          <p class="description">JavaScript, TypeScript, HTML/CSS, Bootstrap, React, node.js</p>
+          <p class="description">JavaScript, React, Node.js, ExpressJS, Material UI, HTML/CSS, Bootstrap </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
           <div class="icon"><i class="bx bx-laptop"></i></div>
           <h4 class="title"><a href="">Technologies</a></h4>
-          <p class="description">Github, Git, Apache, Vim, LATEX, SourceTree, Figma</p>
+          <p class="description">Github, Git, npm, Apache, Vim, LATEX, SourceTree, Figma</p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
           <div class="icon"><i class="bx bx-speaker"></i></div>
           <h4 class="title"><a href="">Communication</a></h4>
-          <p class="description">English (Fluent), Chinese (Fluent)</p>
+          <p class="description">English (Fluent), Chinese</p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
           <div class="icon"><i class="bi bi-calendar4-week"></i></div>
@@ -182,7 +182,7 @@
               <h5>Aug 2020 - Dec 2023</h5>
               <b><p><em>Specialisation: Computer Security, Networking & Distributed Systems</em></p></b>
               <p>Relevant Coursework: <br> 
-                Software Engineering, Data Structures and Algorithms, Object-Oriented Programming, Operating Systems, Computer Security, Computer Networks</p>
+                Software Engineering, Data Structures and Algorithms, Object-Oriented Programming, Operating Systems, Computer Security, Software Security, Computer Networks</p>
               <p>Leadership & Activities: <br>
                 • Teaching Assistant: 
                   <br> &nbsp &nbsp • IS1108 (Digital Ethics and Data Privacy) AY22/23 <br><br>
@@ -194,8 +194,8 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Cybersecurity Analyst Intern</h4>
-              <h5>Visa, Mobile and Mac Security (MMS) Team</h5>
+              <h4>Cybersecurity Analyst</h4>
+              <h5>Visa, Mobile and Mac Security (MMS) Pentest Team</h5>
               <h5>May 2023 - Present</h5>
               <!-- <ul>
                 <li>Performed ethical penetration testing on various Visa mobile and Mac assets to simulate real-life security vulnerabilities and scenarios</li>
@@ -204,7 +204,7 @@
               </ul> -->
             </div>
             <div class="resume-item">
-              <h4>Cybersecurity Research Engineer Intern</h4>
+              <h4>Cybersecurity Research Intern</h4>
               <h5>DSO National Laboratories, Cybersecutiy Lab (CSL)</h5>
               <h5>May - Aug 2022</h5>
               <!-- <ul>
